--- a/DiscordPlus.theme.css
+++ b/DiscordPlus.theme.css
@@ -40,7 +40,7 @@
 
 /* If you use light theme, you can give it unique settings that are separate from dark theme. */
 .theme-light {
-  --dplus-backdrop: url(https://i.imgur.com/3AiL3yN.png);
+  --dplus-backdrop: url(https://media.discordapp.net/attachments/1121775335315341312/1125019563344535612/1688248624318.jpg?width=1200&height=675g);
   
   --dplus-accent-color-hue: 320;
   --dplus-accent-color-saturation: 60%;
